syntax = "proto3";

package index;
option go_package = "github.com/pachyderm/pachyderm/src/server/pkg/storage/fileset/index";

import "server/pkg/storage/chunk/chunk.proto";

message Range {
  int64 offset = 1;
  string last_path = 2;
  // bloom filter, stats, etc.
}

// DataOp is a sequence of data references and an operation associated with the referenced data.
// Tags map identifiers to data in the resulting byte stream. 
message DataOp {
  repeated chunk.DataRef data_refs = 1;
  Op op = 2;
  repeated Tag tags = 3;
}

// Op is the set of operations that can be associated with data.
enum Op {
  APPEND = 0;
  OVERWRITE = 1;
  DELETE = 2;
}

message Tag {
  string id = 1;
  int64 size_bytes = 2;
}

// Index stores an index to and metadata about file sets.
message Index {
  string path = 1;
  Range range = 2;
  DataOp data_op = 3;
  // Size of the content being indexed (does not include headers).
  int64 size_bytes = 4;
  string last_path_chunk = 5;
}
